# OCR_PDF_Agent

./: .env.example  .gitignore  README.md  Rag.py  pyproject.toml
Dataclass/: ORC_dataclass.py
docker/: paddle-ingest.Dockerfile
evaluation/: golden_eval_vlm.json  golden_eval_vlm.md  golden_eval_vlm.py  golden_questions_vlm.json  vlm_q1.txt  vlm_q2.txt  vlm_q3.txt  vlm_trusted_eval.py  vlm_trusted_evaluation.json  vlm_trusted_evaluation.md
ocr_agent/: agent_graph.py  chunking.py  cli.py  costs.py  ingest.py  ingest_graph.py  markdown.py  ocr.py  pdf.py  qa.py  rag_store.py  schemas.py  utils.py  vlm.py
scripts/: run_paddle_ingest_docker.sh
showcase/: README.md  app.js  index.html  server.py  styles.css
tests/: test_chunking.py  test_costs.py  test_ids.py  test_schemas.py
tools/: Chart_tools.py  Cropping.py  LayoutLM_tools.py  ORC_tools.py  Table_tools.py
